# tag2dir-rs

./: .gitignore  appxmanifest.xml  index.html  package-lock.json  package.json  tmpclaude-894d-cwd  vite.config.ts
scripts/: msix.bat
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  file_ops.rs  lib.rs  metadata.rs  models.rs  scanner.rs
src/components/: ControlBar.tsx  ImageCard.tsx  ImageGrid.tsx  MovePreviewPanel.tsx  StatusBar.tsx
