[package]
name = "tag2dir"
version = "0.1.0"
description = "图片人物分类工具 - Image person classification tool"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["image-png", "image-ico"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Image processing
image = "0.25"

# Metadata reading (pure Rust, no C/C++ dependencies)
kamadak-exif = "0.6"
roxmltree = "0.20"
img-parts = "0.3"

# File system
walkdir = "2.5"

# Async & parallelism
tokio = { version = "1", features = ["full"] }
rayon = "1.10"

# Utils
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
parking_lot = "0.12"
